# WuToDo

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  trigger.html  vite.config.ts
src/: App.vue  style.css  trigger.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppHeader.vue  JiraConfigModal.vue  JiraIssueItem.vue  JiraIssueList.vue  TodoInput.vue  TodoItem.vue  TodoList.vue
src/composables/: useJira.ts  useTodos.ts  useWindowSlide.ts
src/types/: jira.ts  todo.ts
